@@ -1,10 +1,11 @@
 [1.1.3]
-* use mitmproxy instead of proxy.py : bigger distrib but lighter and faster runtime
+* faster by using of mitmproxy instead of proxy.py
+* faster with clang build
 * forward to users proxies
 * error log in cachedir
 
 [1.1.2]
-* use noitka for the distribution (executable & archive)
+* faster by using noitka for the distribution (executable & archive)
 
 [1.1.1]
 * change repo structure
